# CF

./: CF.mk  CF.project  CF.workspace  CFDate.c  CFInternal.h  CFLinuxCompatibility.h  CFPlatform.c  CFPlatformCompatibility.h  CFRunLoop.c  CFRuntime.c  CFTimeZone.c  CMakeLists.txt  CoreFoundation.h  CoreFoundation_Prefix.h  Makefile  MakefileLinux  README_CFLITE  checkint.h
.codelite/: CF.session  CF.workspace.design_complex  compilation.db  compile_commands.json  cppcheck.list  subversion.conf
